--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   provisioner:
     build:
       context: .
-      dockerfile: ./DockerfileControlNode
+      dockerfile: ./files/dockerFiles/DockerfileControlNode
     stdin_open: true
     tty: true
     
