--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./files/dockerFiles/DockerfileControlNode
     stdin_open: true
     tty: true
+    container_name: provisioner
     
 networks: 
   default: 
